@@ -50,7 +50,7 @@
   <modcategories>
     <category blackmarket="Armor">Customized Ballistic Mask</category>
     <category blackmarket="Armor">Full Body Armor Mods</category>
-    <category blackmarket="Armor">General</category>
+    <category blackmarket="Armor,Electronics,Magic,Software">General</category>
     <category blackmarket="Armor">Globetrotter Clothing Liners</category>
     <category blackmarket="Armor">Globetrotter Jacket Liners</category>
     <category blackmarket="Armor">Globetrotter Vest Liners</category>
