@@ -74,6 +74,9 @@
     <category>Drugs</category>
     <category>Electronics</category>
     <category>Geneware</category>
+    <category>Magic</category>
+    <category>Nanoware</category>
+    <category>Software</category>
     <category>Vehicles</category>
     <category>Weapons</category>
   </blackmarketpipelinecategories>
